[package]
name = "gui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15", features = [ "v3_22" ] }
gdk = "0.15"
glib = "0.15"
wayland-client = "0.30.2"
winit = "0.28.6"
gtk-layer-shell = { version = "0.4" }

[dev-dependencies]
cargo-watch = "8.4.0"
