[package]
name = "gui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15", features = [ "v3_22" ] }
gdk = "0.15"
glib = "0.15"
gio = "0.15"
gtk-layer-shell = { version = "0.4" }
hyprland = "0.3.9"
notify = "6.0.1"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
cargo-watch = "8.4.0"
